stitch/src/snapshots/stitch__parser__tests__not_binds_tighter_than_and.snap
---
source: stitch/src/parser.rs
expression: "parse(\"not a and b\")"
---
Binary {
    op: And,
    left: Unary {
        op: Not,
        operand: Var(
            "a",
        ),
    },
    right: Var(
        "b",
    ),
}
