stitch/src/snapshots/stitch__parser__tests__parentheses_override_precedence.snap
---
source: stitch/src/parser.rs
expression: "parse(\"(1 + 2) * 3\")"
---
Binary {
    op: Mul,
    left: Binary {
        op: Add,
        left: Int(
            1,
        ),
        right: Int(
            2,
        ),
    },
    right: Int(
        3,
    ),
}
