stitch/src/snapshots/stitch__parser__tests__parenthesized_grouping_is_not_a_lambda.snap
---
source: stitch/src/parser.rs
expression: "p(\"(1 + 2) * 3\")"
---
Binary {
    op: Mul,
    left: Binary {
        op: Add,
        left: Int(
            1,
        ),
        right: Int(
            2,
        ),
    },
    right: Int(
        3,
    ),
}
