stitch/src/snapshots/stitch__parser__tests__parenthesized_type_is_not_a_tuple.snap
---
source: stitch/src/parser.rs
expression: "prog(\"prod Wrap(x: (Int))\")"
---
[
    Prod {
        name: "Wrap",
        generics: [],
        fields: [
            Field {
                name: Some(
                    "x",
                ),
                mutable: false,
                ty: Name {
                    name: "Int",
                    args: [],
                },
                public: false,
            },
        ],
        public: false,
    },
]
