stitch/src/snapshots/stitch__parser__tests__parses_addition.snap
---
source: stitch/src/parser.rs
expression: "parse(\"1 + 2\")"
---
Binary {
    op: Add,
    left: Int(
        1,
    ),
    right: Int(
        2,
    ),
}
