stitch/src/snapshots/stitch__parser__tests__parses_block_with_let_mut.snap
---
source: stitch/src/parser.rs
expression: "p(\"{ let mut n = 0  n }\")"
---
Block {
    stmts: [
        Let {
            name: "n",
            mutable: true,
            value: Int(
                0,
            ),
        },
    ],
    result: Some(
        Var(
            "n",
        ),
    ),
}
