stitch/src/snapshots/stitch__parser__tests__parses_block_with_result_only.snap
---
source: stitch/src/parser.rs
expression: "p(\"{ 1 + 2 }\")"
---
Block {
    stmts: [],
    result: Some(
        Binary {
            op: Add,
            left: Int(
                1,
            ),
            right: Int(
                2,
            ),
        },
    ),
}
